force-app/main/default/objects/sContact__c/sContact__c.object-meta.xml
<CustomObject>
    <label>sContact</label>
    <nameField>
        <label>sContact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sContacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>