force-app/main/default/objects/sContact__c/fields/Account_Field3__c.field-meta.xml
<CustomField>
    <fullName>Account_Field3__c</fullName>
    <label>Account Field3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>