force-app/main/default/objects/sContact__c/fields/picklistfield__c.field-meta.xml
<CustomField>
    <fullName>picklistfield__c</fullName>
    <label>picklistfield</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>one</fullName>
            </value>
            <value>
                <fullName>two</fullName>
            </value>
            <value>
                <fullName>three</fullName>
            </value>
            <value>
                <fullName>four</fullName>
            </value>
            <value>
                <fullName>five</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>