force-app/main/default/objects/sContact__c/fields/sAccountId__c.field-meta.xml
<CustomField>
    <fullName>sAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>sAccount</label>
    <referenceTo>sAccount__c</referenceTo>
    <relationshipLabel>sContacts</relationshipLabel>
    <relationshipName>sContacts</relationshipName>
    <type>Lookup</type>
</CustomField>